--- a/WpfApp4/MainWindow.xaml
+++ b/WpfApp4/MainWindow.xaml
@@ -22,24 +22,26 @@
         </StackPanel>
         <ListBox Grid.Column="0" Grid.Row="1"
                 Background="#FDF5DF"
-                Name="listToDo"
+                x:Name="listToDo"
                 Margin="0 0 10 0">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock Name="titleToDo" Text="{Binding Path=Name}"/>
-                        <TextBlock Name="dateToDo" Text="{Binding Path=Date, StringFormat=dd.MM.yyyy}"/>
-                        <TextBlock Name="descriptionToDo" Text="{Binding Path=Description}"/>
+                        <TextBlock x:Name="titleToDo1"/>
+                        <TextBlock x:Name="dateToDo" Text="{Binding Path=Date, StringFormat=dd.MM.yyyy}"/>
+                        <TextBlock x:Name="descriptionToDo"  Text="{Binding Path=Description}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
             </ListBox>
         <CheckBox Grid.Column="1" Content="Добавление новых дел" VerticalAlignment="Center"/>
-        <GroupBox Grid.Column="1" Grid.Row="1" Background="#FDF5DF">
+        <GroupBox Grid.Column="1" Grid.Row="1"
+                  x:Name="groupBoxToDo"
+                  Background="#FDF5DF">
             <StackPanel Margin="10 0 10 0">
                 <StackPanel>
                     <TextBlock Text="Название:"/>
-                    <TextBox x:Name="titleToDo" Margin="0 5 0 0"/>
+                    <TextBox x:Name="titleToDo2" Margin="0 5 0 0"/>
                 </StackPanel>
                 <StackPanel Margin="0 10 0 0">
                     <TextBlock Text="Выполнить до:"/>
@@ -52,5 +54,8 @@
             </StackPanel>
             
         </GroupBox>
+        <StackPanel Grid.Column="1" Grid.Row="2">
+            <Button Content="Дело" Click="Button_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
