--- a/WpfApp4/MainWindow.xaml
+++ b/WpfApp4/MainWindow.xaml
@@ -27,35 +27,57 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock x:Name="titleToDo1"/>
-                        <TextBlock x:Name="dateToDo" Text="{Binding Path=Date, StringFormat=dd.MM.yyyy}"/>
-                        <TextBlock x:Name="descriptionToDo"  Text="{Binding Path=Description}"/>
+                        <TextBlock Text="{Binding Path=Name}"/>
+                        <TextBlock Text="{Binding Path=Date, StringFormat=dd.MM.yyyy}"/>
+                        <TextBlock Text="{Binding Path=Description}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
             </ListBox>
-        <CheckBox Grid.Column="1" Content="Добавление новых дел" VerticalAlignment="Center"/>
+        <CheckBox Grid.Column="1" 
+                  Content="Добавление новых дел" 
+                  VerticalAlignment="Center"
+                  Visibility="Visible"
+                  Checked="CheckBox_Cheked"
+                  Unchecked="CheckBox_Uncheked"
+                  IsThreeState="False"
+                  IsChecked="True"/>
+        
         <GroupBox Grid.Column="1" Grid.Row="1"
                   x:Name="groupBoxToDo"
                   Background="#FDF5DF">
             <StackPanel Margin="10 0 10 0">
                 <StackPanel>
                     <TextBlock Text="Название:"/>
-                    <TextBox x:Name="titleToDo2" Margin="0 5 0 0"/>
+                    <TextBox Name="titleToDo" Margin="0 5 0 0"/>
                 </StackPanel>
                 <StackPanel Margin="0 10 0 0">
                     <TextBlock Text="Выполнить до:"/>
-                    <DatePicker Margin="0 5 0 0"/>
+                    <DatePicker Margin="0 5 0 0"
+                                Name = "dateToDo"/>
                 </StackPanel>
                 <StackPanel Margin="0 10 0 0">
                     <TextBlock Text="Описание:"/>
-                    <TextBox Height="200" />
+                    <TextBox Height="200" Name="descriptionToDo"/>
                 </StackPanel>
             </StackPanel>
-            
+
         </GroupBox>
-        <StackPanel Grid.Column="1" Grid.Row="2">
-            <Button Content="Дело" Click="Button_Click"/>
-        </StackPanel>
+        <Button Grid.Column="1" Grid.Row="2" 
+                VerticalAlignment="Center" 
+                Content="Добавить дело" 
+                Background="#5EBEC4"
+                Height="25"
+                Width="100"
+                Click="CreateToDo"
+                />
+        <Button Grid.Column="0" Grid.Row="2" 
+        VerticalAlignment="Center" 
+        Content="Удалить дела" 
+        Background="#5EBEC4"
+        Height="25"
+        Width="100"
+        Click="DeleteToDo"
+        />
     </Grid>
 </Window>
